objects/nPortal__Security_Badge__c.object
<CustomObject>
    <description>The Security Badge object allows administrators to configure security badges in Customer Portal.</description>
    <fields>
        <fullName>nPortal__Alt_Text__c</fullName>
        <description>Administrators populate this text field with the alternative text for screen readers.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter alternative text for the security badge.</inlineHelpText>
        <label>Alt Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nPortal__Document_ID__c</fullName>
        <description>Administrators populate this text field with the Salesforce ID of the Document record that holds the security badge image.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the Salesforce ID from the Document record of the security badge.</inlineHelpText>
        <label>Document ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nPortal__Is_Decorative__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Administrators populate this checkbox field to indicate if the screen reader reads off the security badge.</description>
        <inlineHelpText>Select this field to hide the security badge from the screen reader.</inlineHelpText>
        <label>Is Decorative</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nPortal__Is_Portal_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Administrators populate this checkbox field to indicate if the Security Badge is automatically shared with Customer Portal users.</description>
        <inlineHelpText>Select this field to display the Security Badge to Customer Portal users.</inlineHelpText>
        <label>Is Portal Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nPortal__lookupKey__c</fullName>
        <description>The system populates this lookup field with a unique identifier to help facilitate data migration between sandbox and production orgs. By default, this field is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This system-populated field automatically displays the unique identifier for data migration.</inlineHelpText>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Security Badge</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Security Badge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Security Badges</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>